feat(PDFView): 新增自定义pdf预览组件

--- a/src/PDFView/index.less
+++ b/src/PDFView/index.less
@@ -28,9 +28,9 @@
   margin: 25px 0;
   background: #fff;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
-  :global {
-    .react-pdf__Page__textContent { display: none; }
-  }
+  // :global {
+  //   .react-pdf__Page__textContent { display: none; }
+  // }
 }
 
 .pageBar {
@@ -92,13 +92,6 @@
   color: #666;
 }
 
-.thumbnailContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  padding: 20px;
-}
 
 
 
