feat(PDFView): 新增pdf组件配置

--- a/src/PDFView/index.less
+++ b/src/PDFView/index.less
@@ -25,7 +25,7 @@
 .pageContainer {
   width: max-content;
   max-width: 100%;
-  margin: 25px 0;
+  margin: 20px;
   background: #fff;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
   // :global {
@@ -70,6 +70,7 @@
   justify-content: center;
   gap: 20px;
   padding: 20px;
+  background: #fff;
 }
 
 .thumbnail {
