--- a/src/PDFView/index.less
+++ b/src/PDFView/index.less
@@ -27,10 +27,7 @@
   max-width: 100%;
   margin: 20px;
   background: #fff;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
-  // :global {
-  //   .react-pdf__Page__textContent { display: none; }
-  // }
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .pageBar {
@@ -41,27 +38,52 @@
 }
 
 .pageTool {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
   padding: 8px 15px;
   color: white;
-  background: rgba(66, 66, 66, 0.5);
+  background: rgba(66, 66, 66, 0.7);
   border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
-  span {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+
+  > * {
     margin: 0 5px;
     padding: 5px;
-    &:hover { background: #333; }
+    cursor: pointer;
+    transition: background 0.2s;
+
+    &:hover:not(:disabled) {
+      background: #333;
+      border-radius: 4px;
+    }
+
+    &:focus {
+      outline: 2px solid #1890ff;
+      outline-offset: 2px;
+    }
   }
+
   input {
-    display: inline-block;
     width: 50px;
     height: 24px;
-    margin-right: 10px;
     text-align: center;
+    border-radius: 4px;
+    margin-right: 10px;
   }
+
   input::-webkit-outer-spin-button,
-  input::-webkit-inner-spin-button { -webkit-appearance: none; }
-  input[type='number'] { -moz-appearance: textfield; }
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+
+  input[type='number'] {
+    -moz-appearance: textfield;
+  }
+
+  input:disabled {
+    background: #ccc;
+    cursor: not-allowed;
+  }
 }
 
 .thumbnailContainer {
@@ -80,7 +102,27 @@
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  &:hover { box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); }
+  transition: box-shadow 0.2s;
+
+  &:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+
+  &.loading {
+    opacity: 0.5;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+    }
+  }
 }
 
 .thumbnailPlaceholder {
@@ -91,9 +133,9 @@
   justify-content: center;
   background: #f0f0f0;
   color: #666;
+  border-radius: 5px;
 }
 
-
-
-
-
+.pdf-page {
+  margin-bottom: 10px;
+}
