--- a/src/PDFView/index.less
+++ b/src/PDFView/index.less
@@ -13,13 +13,44 @@
   height: 100%;
 }
 
+.pdf-page-container {
+  position: relative;
+  margin-bottom: 0;
+
+  &::after {
+    content: '';
+    display: block;
+    height: 20px;
+    background: linear-gradient(45deg,
+        #e1ebda,
+        #e1e8de,
+        #ebe4db,
+        #e8e2dd);
+    width: 100%;
+  }
+
+  &:last-child::after {
+    display: none;
+  }
+
+  .pdf-page-content {
+    background: #fff;
+    margin: 0 auto;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+}
+
 .pageMain {
   display: flex;
   justify-content: center;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background: #444;
+  background: linear-gradient(45deg,
+      #e1ebda,
+      #e1e8de,
+      #ebe4db,
+      #e8e2dd);
 }
 
 .pageContainer {
@@ -46,7 +77,7 @@
   border-radius: 15px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
-  > * {
+  >* {
     margin: 0 5px;
     padding: 5px;
     cursor: pointer;
